fix: navbar elements alignment issue

--- a/landing.css
+++ b/landing.css
@@ -4,12 +4,14 @@
 /* Navigation bar */
 
 .brand-name {
-  font-size: 2rem;
+  font-size: 1.8rem;
   padding-bottom: 8px;
+  padding-left: 2px;
+  font-weight: 600;
 }
 .brand-logo {
-  margin-left: 1.6rem;
-  margin-top: 1.2rem;
+  margin-left: 1rem;
+  margin-top: -5px;
 }
 .flex-display {
   display: flex;
@@ -20,6 +22,7 @@
   flex-direction: row;
   justify-content: space-between;
   color: var(--text-white-color);
+  padding:1rem;
 }
 
 .nav-bar-tabs {
@@ -28,8 +31,8 @@
   width: 15rem;
 }
 .nav-text {
-  margin-top: 2rem;
   font-weight: 600;
+  font-size: 1.1rem;
 }
 .nav-tab-text {
   color: var(--primary-color);
